# aws-amplify-webassembly

./: .gitignore  .prettierrc  Makefile  README.md  amplify.yml
ci-build-image/: Dockerfile  README.md
wasm/: Cargo.toml  FRAMEWORK.md  LICENSE_MIT
wasm/src/: lib.rs  utils.rs
wasm/tests/: web.rs
webapp/: .eslintrc  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
webapp/src/: index.css  main.tsx
webapp/src/components/: approot.tsx
webapp/src/components/hash-card/: hash-card.tsx  index.ts
webapp/src/hooks/: use-hasher.tsx
webapp/src/views/home/: home.tsx  index.ts
