[package]
name = "wasm"
version = "0.1.0"
authors = ["Richard Neil Ilagan <ilagan@amazon.com>"]
edition = "2018"
license = "MIT-0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
sha2 = "0.10.7"
lol_alloc = "0.4.0"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }
getrandom = { version = "0.2.10", features = ["js"] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
